# api-gateway

./: Cargo.toml  readme.md
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs
src/handlers/: mod.rs  tests.rs
src/middleware/: mod.rs  tests.rs
src/services/: mod.rs  tests.rs
src/tests/: integration_tests.rs
